[gd_scene load_steps=4 format=2]

[ext_resource path="res://demo/currencies/Fees.gd" type="Script" id=1]
[ext_resource path="res://demo/shared/ErrorBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://demo/shared/TxnInfo.tscn" type="PackedScene" id=3]

[node name="Fees" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 1 )

[node name="MBox-Request" type="MarginContainer" parent="."]
margin_right = 492.0
margin_bottom = 564.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 16
custom_constants/margin_top = 8
custom_constants/margin_left = 16
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MBox-Request"]
margin_left = 16.0
margin_top = 8.0
margin_right = 476.0
margin_bottom = 556.0
custom_constants/separation = 16

[node name="GetGrid" type="GridContainer" parent="MBox-Request/VBoxContainer"]
margin_right = 460.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_constants/vseparation = 8
custom_constants/hseparation = 16
columns = 2

[node name="Label-v02" type="Label" parent="MBox-Request/VBoxContainer/GetGrid"]
margin_top = 5.0
margin_right = 120.0
margin_bottom = 19.0
rect_min_size = Vector2( 120, 0 )
text = "Currency Id"

[node name="IdInput" type="LineEdit" parent="MBox-Request/VBoxContainer/GetGrid"]
unique_name_in_owner = true
margin_left = 136.0
margin_right = 460.0
margin_bottom = 24.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="Space-v02" type="Label" parent="MBox-Request/VBoxContainer/GetGrid"]
margin_top = 35.0
margin_right = 120.0
margin_bottom = 49.0
rect_min_size = Vector2( 120, 0 )

[node name="GetButton" type="Button" parent="MBox-Request/VBoxContainer/GetGrid"]
unique_name_in_owner = true
margin_left = 136.0
margin_top = 32.0
margin_right = 460.0
margin_bottom = 52.0
size_flags_horizontal = 3
text = "get fee structure"

[node name="SetGrid" type="GridContainer" parent="MBox-Request/VBoxContainer"]
margin_top = 68.0
margin_right = 460.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_constants/vseparation = 8
custom_constants/hseparation = 16
columns = 2

[node name="Label-v06" type="Label" parent="MBox-Request/VBoxContainer/SetGrid"]
margin_top = 5.0
margin_right = 120.0
margin_bottom = 19.0
rect_min_size = Vector2( 120, 0 )
text = "Recipient"

[node name="RecipientInput" type="LineEdit" parent="MBox-Request/VBoxContainer/SetGrid"]
unique_name_in_owner = true
margin_left = 136.0
margin_right = 460.0
margin_bottom = 24.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="Label-v05" type="Label" parent="MBox-Request/VBoxContainer/SetGrid"]
margin_top = 37.0
margin_right = 120.0
margin_bottom = 51.0
rect_min_size = Vector2( 120, 0 )
text = "Max Amount"

[node name="AmountCapInput" type="LineEdit" parent="MBox-Request/VBoxContainer/SetGrid"]
unique_name_in_owner = true
margin_left = 136.0
margin_top = 32.0
margin_right = 460.0
margin_bottom = 56.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="Label-v01" type="Label" parent="MBox-Request/VBoxContainer/SetGrid"]
margin_top = 69.0
margin_right = 120.0
margin_bottom = 83.0
rect_min_size = Vector2( 120, 0 )
text = "Basis Points"

[node name="BasisPointsInput" type="LineEdit" parent="MBox-Request/VBoxContainer/SetGrid"]
unique_name_in_owner = true
margin_left = 136.0
margin_top = 64.0
margin_right = 460.0
margin_bottom = 88.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="Label-v03" type="Label" parent="MBox-Request/VBoxContainer/SetGrid"]
margin_top = 101.0
margin_right = 120.0
margin_bottom = 115.0
rect_min_size = Vector2( 120, 0 )
text = "Fixed Amount"

[node name="FixedAmountInput" type="LineEdit" parent="MBox-Request/VBoxContainer/SetGrid"]
unique_name_in_owner = true
margin_left = 136.0
margin_top = 96.0
margin_right = 460.0
margin_bottom = 120.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="Label-v02" type="Label" parent="MBox-Request/VBoxContainer/SetGrid"]
margin_top = 133.0
margin_right = 120.0
margin_bottom = 147.0
rect_min_size = Vector2( 120, 0 )
text = "Secret Key"

[node name="SecretKeyInput" type="LineEdit" parent="MBox-Request/VBoxContainer/SetGrid"]
unique_name_in_owner = true
margin_left = 136.0
margin_top = 128.0
margin_right = 460.0
margin_bottom = 152.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
secret = true
caret_blink = true
caret_blink_speed = 0.5

[node name="Label-v04" type="Label" parent="MBox-Request/VBoxContainer/SetGrid"]
margin_top = 165.0
margin_right = 120.0
margin_bottom = 179.0
rect_min_size = Vector2( 120, 0 )
text = "Main Password"

[node name="PasswordInput" type="LineEdit" parent="MBox-Request/VBoxContainer/SetGrid"]
unique_name_in_owner = true
margin_left = 136.0
margin_top = 160.0
margin_right = 460.0
margin_bottom = 184.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
secret = true
caret_blink = true
caret_blink_speed = 0.5

[node name="Space-v02" type="Label" parent="MBox-Request/VBoxContainer/SetGrid"]
margin_top = 195.0
margin_right = 120.0
margin_bottom = 209.0
rect_min_size = Vector2( 120, 0 )

[node name="SetButton" type="Button" parent="MBox-Request/VBoxContainer/SetGrid"]
unique_name_in_owner = true
margin_left = 136.0
margin_top = 192.0
margin_right = 460.0
margin_bottom = 212.0
size_flags_horizontal = 3
text = "set fee structure"

[node name="HSeparator" type="VSeparator" parent="."]
margin_left = 496.0
margin_right = 520.0
margin_bottom = 564.0
custom_constants/separation = 24

[node name="MBox-Result" type="MarginContainer" parent="."]
margin_left = 524.0
margin_right = 1016.0
margin_bottom = 564.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 16
custom_constants/margin_top = 8
custom_constants/margin_left = 16
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MBox-Result"]
margin_left = 16.0
margin_top = 8.0
margin_right = 476.0
margin_bottom = 556.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16

[node name="ErrorBox" parent="MBox-Result/VBoxContainer" instance=ExtResource( 2 )]
unique_name_in_owner = true
margin_left = 0.0
margin_top = 0.0
margin_right = 460.0
margin_bottom = 266.0
size_flags_vertical = 3

[node name="ResultBox" type="ScrollContainer" parent="MBox-Result/VBoxContainer"]
unique_name_in_owner = true
visible = false
margin_top = 188.0
margin_right = 460.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SetGrid" type="GridContainer" parent="MBox-Result/VBoxContainer/ResultBox"]
margin_right = 460.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_constants/vseparation = 8
custom_constants/hseparation = 16
columns = 2

[node name="Label-v06" type="Label" parent="MBox-Result/VBoxContainer/ResultBox/SetGrid"]
margin_top = 5.0
margin_right = 120.0
margin_bottom = 19.0
rect_min_size = Vector2( 120, 0 )
text = "Recipient"

[node name="RecipientField" type="LineEdit" parent="MBox-Result/VBoxContainer/ResultBox/SetGrid"]
unique_name_in_owner = true
margin_left = 136.0
margin_right = 460.0
margin_bottom = 24.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="Label-v05" type="Label" parent="MBox-Result/VBoxContainer/ResultBox/SetGrid"]
margin_top = 37.0
margin_right = 120.0
margin_bottom = 51.0
rect_min_size = Vector2( 120, 0 )
text = "Max Amount"

[node name="AmountCapField" type="LineEdit" parent="MBox-Result/VBoxContainer/ResultBox/SetGrid"]
unique_name_in_owner = true
margin_left = 136.0
margin_top = 32.0
margin_right = 460.0
margin_bottom = 56.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="Label-v01" type="Label" parent="MBox-Result/VBoxContainer/ResultBox/SetGrid"]
margin_top = 69.0
margin_right = 120.0
margin_bottom = 83.0
rect_min_size = Vector2( 120, 0 )
text = "Basis Points"

[node name="BasisPointsField" type="LineEdit" parent="MBox-Result/VBoxContainer/ResultBox/SetGrid"]
unique_name_in_owner = true
margin_left = 136.0
margin_top = 64.0
margin_right = 460.0
margin_bottom = 88.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="Label-v03" type="Label" parent="MBox-Result/VBoxContainer/ResultBox/SetGrid"]
margin_top = 101.0
margin_right = 120.0
margin_bottom = 115.0
rect_min_size = Vector2( 120, 0 )
text = "Fixed Amount"

[node name="FixedAmountField" type="LineEdit" parent="MBox-Result/VBoxContainer/ResultBox/SetGrid"]
unique_name_in_owner = true
margin_left = 136.0
margin_top = 96.0
margin_right = 460.0
margin_bottom = 120.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="TxnInfo" parent="MBox-Result/VBoxContainer" instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_top = 0.0
margin_bottom = 548.0
size_flags_vertical = 3
